--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,12 @@ body {
 h1 {
     font-size: 36px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 0px;
 }
 
 h3 {
     margin-top: 10px;
-    border-bottom: 2px solid #975538;
-    display: inline-block;
+    margin-bottom: 4px;
 }
 
 a {
@@ -26,19 +26,23 @@ a {
 
 img {
     margin: 15px 0px;
+    margin-top: 0px;
     border-top: 4px solid #975538;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    box-shadow: 14px 12px 15px -7px #a672725e;
 }
 
 .card {
     width: 460px;
     margin: 40px 0px;
+    margin-top: 0px;
     padding: 10px 20px;
     background-color: #ffdfd8;
     border-top: 2px solid #975538;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    box-shadow: 14px 12px 15px -7px #a672725e;
 }
 
 .card.menu {
